--- a/src/subject2/subject2.html
+++ b/src/subject2/subject2.html
@@ -39,12 +39,7 @@
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
               allowfullscreen></iframe>
-            <iframe
-              src="https://player.vimeo.com/video/858375641?badge=0&amp;autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&controls=0&autopause=0"
-              style="aspect-ratio: 1440 / 810; width: 100%"
-              frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture"
-              allowfullscreen></iframe>
+            <img src="./assets/2.jpg" alt="" />
             <img src="./assets/3.jpg" alt="" />
             <iframe
               src="https://player.vimeo.com/video/858376108?badge=0&amp;autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&controls=0&autopause=0"
