1차 심사_소셜 수정

--- a/src/subject2/subject2.html
+++ b/src/subject2/subject2.html
@@ -100,7 +100,7 @@
             <img src="./assets/17_2.jpg" alt="" />
             <img src="./assets/18.jpg" alt="" />
             <img src="./assets/18_3.jpg" alt="" />
-            <img src="./assets/29.jpg" alt="" />
+            <img src="./assets/29_1.jpg" alt="" />
             <iframe
               src="https://player.vimeo.com/video/860582225?badge=0&amp;autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&controls=0&autopause=0"
               style="aspect-ratio: 1440 / 810; width: 100%"
