1차심사 이후_브랜드 수정

--- a/src/subject1/subject1.html
+++ b/src/subject1/subject1.html
@@ -39,8 +39,12 @@
             <img src="./assets/4.jpg" alt="" />
             <img src="./assets/5.jpg" alt="" />
             <img src="./assets/6.jpg" alt="" />
-            <img src="./assets/7.jpg" alt="" />
-            <img src="./assets/8.jpg" alt="" />
+            <iframe
+              src="https://player.vimeo.com/video/863425525?badge=0&amp;autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&controls=0&autopause=0"
+              style="aspect-ratio: 1440 / 810; width: 100%"
+              frameborder="0"
+              allow="autoplay; fullscreen; picture-in-picture"
+              allowfullscreen></iframe>
             <iframe
               src="https://player.vimeo.com/video/858279435?badge=0&amp;autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&controls=0&autopause=0"
               style="aspect-ratio: 1440 / 800; width: 100%"
@@ -60,6 +64,7 @@
             <img src="./assets/15.jpg" alt="" />
             <img src="./assets/16.jpg" alt="" />
             <img src="./assets/17.jpg" alt="" />
+            <img src="./assets/17_1.jpg" alt="" />
             <img src="./assets/18.jpg" alt="" />
             <img src="./assets/19.jpg" alt="" />
             <img src="./assets/20.jpg" alt="" />
